commit : api key test